--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Chatify">
-        <activity android:name=".UserEditInfo"></activity>
+        <activity android:name=".RecyclerActivity"></activity>
+        <activity android:name=".PostAdapter" />
+        <activity android:name=".UserEditInfo" />
         <activity android:name=".NavigationActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainActivity">
